# keyword-index

./: Cargo.toml  README.md  default.nix  dev-setup.md  package-lock.json  package.json  rocket.config.js
.github/workflows/: main.yml
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/zome/: Cargo.toml  README.md
crates/zome/src/: lib.rs
crates/zome/tests/: index_and_search.rs
nix/: sources.json
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
