[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "Types for the hc_zome_searchs zome"
documentation = "https://holochain-open-dev.github.io/search"
edition = "2021"
homepage = "https://docs.rs/hc_zome_keyword_index_types"
license = "MIT"
name = "hc_zome_keyword_index_types"
repository = "https://github.com/holochain-open-dev/search"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_keyword_index_types"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.130", features = ["encoding"]}
