[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "keyword-index zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/keyword-index"
edition = "2021"
homepage = "https://docs.rs/hc_zome_keyword_index"
license = "MIT"
name = "hc_zome_keyword_index"
repository = "https://github.com/holochain-open-dev/keyword-index"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_keyword_index"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_keyword_index_types = {path = "../types"}
hdk = {version = "0.0.130", features = ["encoding"]}

[dev-dependencies]
fixt = "0.0.10"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.130", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.136", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}